# factory_echo_bot

./: .dockerignore  .env.dist  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
.github/workflows/: build_deploy.yaml
apps/bot/: models.py  serialisers.py  services.py  urls.py  utils.py  views.py
apps/bot/management/commands/: runbot.py
apps/bot/migrations/: 0001_initial.py  0002_message_bot_message.py  0003_remove_bot_message.py
apps/bot/tg/: client.py
apps/user/: models.py  serializers.py  services.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py  0002_user_bot_token.py  0003_alter_user_bot_token.py  0004_alter_user_bot_token.py  0005_alter_user_bot_token.py
bot_task/: asgi.py  settings.py  urls.py  wsgi.py
deploy/: Dockerfile  docker-compose.yaml
docker/deploy/: Dockerfile  docker-compose.yaml
docker/local/: Dockerfile  docker-compose.yaml
tests/: conftest.py  factories.py  fixtures.py  test_bot.py  test_user.py
